--- a/SRSDriver/Resources/Storyboards/Order.storyboard
+++ b/SRSDriver/Resources/Storyboards/Order.storyboard
@@ -268,7 +268,7 @@
         <scene sceneID="8ZP-Vd-Hgf">
             <objects>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eVV-2Y-Lag" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <viewController storyboardIdentifier="OrderDetailContainerViewController" id="eLg-1Y-uPw" customClass="OrderDetailContainerViewController" customModule="DMSDriver" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="OrderDetailContainerViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="eLg-1Y-uPw" customClass="OrderDetailContainerViewController" customModule="DMSDriver" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="rf7-IP-Xtd">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -304,7 +304,7 @@
                     </connections>
                 </viewController>
             </objects>
-            <point key="canvasLocation" x="3105" y="-251"/>
+            <point key="canvasLocation" x="3262" y="-97"/>
         </scene>
         <!--Order Detail View Controller-->
         <scene sceneID="sfJ-Ia-S7a">
@@ -464,7 +464,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nmd-vq-TD7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3807.1999999999998" y="-259.52023988005999"/>
+            <point key="canvasLocation" x="4014" y="-116"/>
         </scene>
         <!--Reason List View Controller-->
         <scene sceneID="5wE-Rd-hNH">
@@ -890,6 +890,146 @@
             </objects>
             <point key="canvasLocation" x="1532" y="-73"/>
         </scene>
+        <!--Order Picture View Controller-->
+        <scene sceneID="EeO-ts-sEJ">
+            <objects>
+                <viewController storyboardIdentifier="OrderPictureViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="20t-UQ-9pn" customClass="OrderPictureViewController" customModule="DMSDriver" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="gV8-1q-GZ6">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="drG-lw-Imq">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <view key="tableHeaderView" contentMode="scaleToFill" id="QcA-bS-6I4">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="40"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <subviews>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2da-hs-kDG">
+                                            <rect key="frame" x="275" y="0.0" width="100" height="40"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="100" id="mNq-aD-lyb"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                            <state key="normal" title="Take Picture">
+                                                <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            </state>
+                                            <userDefinedRuntimeAttributes>
+                                                <userDefinedRuntimeAttribute type="string" keyPath="localizeKey" value="order_detail_take_picture"/>
+                                            </userDefinedRuntimeAttributes>
+                                            <connections>
+                                                <action selector="takePicture:" destination="20t-UQ-9pn" eventType="touchUpInside" id="80P-Fw-ZwT"/>
+                                            </connections>
+                                        </button>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YlK-IM-oJQ">
+                                            <rect key="frame" x="0.0" y="0.0" width="60" height="40"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="60" id="2Pr-OM-gaj"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                            <state key="normal" title="Clear">
+                                                <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            </state>
+                                            <userDefinedRuntimeAttributes>
+                                                <userDefinedRuntimeAttribute type="string" keyPath="localizeKey" value="clear"/>
+                                            </userDefinedRuntimeAttributes>
+                                            <connections>
+                                                <action selector="clearPhotos:" destination="20t-UQ-9pn" eventType="touchUpInside" id="Zs0-yy-bJg"/>
+                                            </connections>
+                                        </button>
+                                    </subviews>
+                                    <color key="backgroundColor" red="0.94509803920000002" green="0.54117647059999996" blue="0.12549019610000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <constraints>
+                                        <constraint firstItem="YlK-IM-oJQ" firstAttribute="leading" secondItem="QcA-bS-6I4" secondAttribute="leading" id="7nU-fr-ZbR"/>
+                                        <constraint firstItem="YlK-IM-oJQ" firstAttribute="top" secondItem="QcA-bS-6I4" secondAttribute="top" id="KhF-5U-abm"/>
+                                        <constraint firstAttribute="bottom" secondItem="YlK-IM-oJQ" secondAttribute="bottom" id="dcs-ha-Nn9"/>
+                                        <constraint firstAttribute="bottom" secondItem="2da-hs-kDG" secondAttribute="bottom" id="rw5-tk-71J"/>
+                                        <constraint firstAttribute="trailing" secondItem="2da-hs-kDG" secondAttribute="trailing" id="s1D-bW-RfS"/>
+                                        <constraint firstItem="2da-hs-kDG" firstAttribute="top" secondItem="QcA-bS-6I4" secondAttribute="top" id="sTJ-KG-Iix"/>
+                                    </constraints>
+                                </view>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="PictureTableViewCell" rowHeight="90" id="cnI-N1-lHO" customClass="PictureTableViewCell" customModule="DMSDriver" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="68" width="375" height="90"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="cnI-N1-lHO" id="wPj-46-9Ro">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="89.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="place_holder" translatesAutoresizingMaskIntoConstraints="NO" id="OCG-fm-zg6">
+                                                    <rect key="frame" x="16" y="8" width="91.5" height="73.5"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="OCG-fm-zg6" secondAttribute="height" multiplier="5:4" id="wJS-Dx-tBR"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NwY-Ie-sqk">
+                                                    <rect key="frame" x="115.5" y="10" width="243.5" height="69.5"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="light" pointSize="15"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="NwY-Ie-sqk" secondAttribute="trailing" constant="16" id="0dr-zG-uP3"/>
+                                                <constraint firstItem="NwY-Ie-sqk" firstAttribute="leading" secondItem="OCG-fm-zg6" secondAttribute="trailing" constant="8" id="Cws-bV-777"/>
+                                                <constraint firstAttribute="bottom" secondItem="OCG-fm-zg6" secondAttribute="bottom" constant="8" id="JPY-iQ-cQW"/>
+                                                <constraint firstItem="OCG-fm-zg6" firstAttribute="top" secondItem="wPj-46-9Ro" secondAttribute="top" constant="8" id="Xfl-Xu-3RY"/>
+                                                <constraint firstAttribute="bottom" secondItem="NwY-Ie-sqk" secondAttribute="bottom" constant="10" id="Ybc-3k-dgi"/>
+                                                <constraint firstItem="NwY-Ie-sqk" firstAttribute="top" secondItem="wPj-46-9Ro" secondAttribute="top" constant="10" id="aji-Zw-C0b"/>
+                                                <constraint firstItem="OCG-fm-zg6" firstAttribute="leading" secondItem="wPj-46-9Ro" secondAttribute="leading" constant="16" id="l3Y-JI-Dkz"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="imgView" destination="OCG-fm-zg6" id="9II-pP-jHw"/>
+                                            <outlet property="nameLabel" destination="NwY-Ie-sqk" id="HRC-iu-Bjl"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="20t-UQ-9pn" id="AOE-3R-Jga"/>
+                                    <outlet property="delegate" destination="20t-UQ-9pn" id="69a-3C-2SJ"/>
+                                </connections>
+                            </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BQA-dl-LtX">
+                                <rect key="frame" x="275" y="567" width="60" height="60"/>
+                                <color key="backgroundColor" red="0.94509803920000002" green="0.54117647059999996" blue="0.12549019610000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="60" id="92g-Au-FaZ"/>
+                                </constraints>
+                                <state key="normal" image="upload"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="30"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="uploadPhotos:" destination="20t-UQ-9pn" eventType="touchUpInside" id="piW-sU-QWE"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="drG-lw-Imq" firstAttribute="top" secondItem="Vm3-Rq-8pO" secondAttribute="top" id="T1i-Gq-2ax"/>
+                            <constraint firstItem="Vm3-Rq-8pO" firstAttribute="bottom" secondItem="BQA-dl-LtX" secondAttribute="bottom" constant="40" id="ZA2-N7-KLn"/>
+                            <constraint firstItem="drG-lw-Imq" firstAttribute="trailing" secondItem="Vm3-Rq-8pO" secondAttribute="trailing" id="ehD-id-6IZ"/>
+                            <constraint firstItem="BQA-dl-LtX" firstAttribute="width" secondItem="BQA-dl-LtX" secondAttribute="height" multiplier="1:1" id="gzr-9K-BEQ"/>
+                            <constraint firstItem="drG-lw-Imq" firstAttribute="leading" secondItem="Vm3-Rq-8pO" secondAttribute="leading" id="i4U-2g-YCA"/>
+                            <constraint firstItem="Vm3-Rq-8pO" firstAttribute="trailing" secondItem="BQA-dl-LtX" secondAttribute="trailing" constant="40" id="qnm-hn-muU"/>
+                            <constraint firstItem="Vm3-Rq-8pO" firstAttribute="bottom" secondItem="drG-lw-Imq" secondAttribute="bottom" id="xzr-ua-0YC"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Vm3-Rq-8pO"/>
+                    </view>
+                    <connections>
+                        <outlet property="actionButton" destination="BQA-dl-LtX" id="nyA-lN-g8C"/>
+                        <outlet property="headerView" destination="QcA-bS-6I4" id="ysf-bv-jG3"/>
+                        <outlet property="tableView" destination="drG-lw-Imq" id="lfp-KM-z2N"/>
+                        <outlet property="takePictureButton" destination="2da-hs-kDG" id="gLq-w5-sAt"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rXe-IO-dfG" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4090" y="-1254"/>
+        </scene>
     </scenes>
     <resources>
         <image name="barcode-scan" width="32" height="32"/>
@@ -899,6 +1039,8 @@
         <image name="home-map-marker" width="22" height="22"/>
         <image name="list" width="32" height="32"/>
         <image name="map" width="32" height="32"/>
+        <image name="place_holder" width="97" height="85"/>
         <image name="plus_white" width="32" height="32"/>
+        <image name="upload" width="32" height="32"/>
     </resources>
 </document>
