--- a/SRSDriver/Resources/Storyboards/Route.storyboard
+++ b/SRSDriver/Resources/Storyboards/Route.storyboard
@@ -34,7 +34,7 @@
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ocU-yS-FVE">
                                                             <rect key="frame" x="15" y="5" width="345" height="60.5"/>
-                                                            <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="14"/>
+                                                            <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="14"/>
                                                             <color key="textColor" red="0.0" green="0.61568627450000002" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
@@ -45,7 +45,7 @@
                                                         <constraint firstAttribute="bottom" secondItem="ocU-yS-FVE" secondAttribute="bottom" constant="5" id="EBS-C5-WMx"/>
                                                         <constraint firstItem="ocU-yS-FVE" firstAttribute="leading" secondItem="JRs-Di-fTr" secondAttribute="leading" constant="15" id="FGY-wH-C0R"/>
                                                         <constraint firstAttribute="trailing" secondItem="ocU-yS-FVE" secondAttribute="trailing" constant="15" id="U1L-Vz-PP8"/>
-                                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="45" id="pMH-R0-dHm"/>
+                                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="40" id="pMH-R0-dHm"/>
                                                     </constraints>
                                                 </view>
                                             </subviews>
@@ -71,14 +71,14 @@
                                                     <rect key="frame" x="0.0" y="0.0" width="375" height="70.5"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6F5-4b-nJo">
-                                                            <rect key="frame" x="64.5" y="25" width="42" height="21"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <rect key="frame" x="65.5" y="26" width="35.5" height="19.5"/>
+                                                            <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="14"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" alpha="0.5" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Om-d9-exr">
-                                                            <rect key="frame" x="15" y="5" width="34.5" height="60.5"/>
-                                                            <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="14"/>
+                                                            <rect key="frame" x="15" y="5" width="35.5" height="60.5"/>
+                                                            <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="14"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
@@ -108,17 +108,61 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="h6R-mN-a1V">
+                                <rect key="frame" x="0.0" y="461" width="375" height="206"/>
+                                <subviews>
+                                    <datePicker contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="gia-BM-VGq">
+                                        <rect key="frame" x="0.0" y="50" width="375" height="162"/>
+                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                        <date key="date" timeIntervalSinceReferenceDate="542771962.77307701">
+                                            <!--2018-03-15 01:59:22 +0000-->
+                                        </date>
+                                        <date key="minimumDate" timeIntervalSinceReferenceDate="-978267600">
+                                            <!--1970-01-01 11:00:00 +0000-->
+                                        </date>
+                                        <date key="maximumDate" timeIntervalSinceReferenceDate="1167562800">
+                                            <!--2037-12-31 11:00:00 +0000-->
+                                        </date>
+                                    </datePicker>
+                                    <toolbar opaque="NO" clearsContextBeforeDrawing="NO" alpha="0.80000000000000004" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="21D-z1-bBI">
+                                        <rect key="frame" x="0.0" y="-14" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                                        <items>
+                                            <barButtonItem style="plain" systemItem="flexibleSpace" id="YJw-q4-M87"/>
+                                            <barButtonItem title="Done" id="xF0-Ty-rer">
+                                                <color key="tintColor" red="0.0" green="0.61568627450000002" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
+                                                <userDefinedRuntimeAttributes>
+                                                    <userDefinedRuntimeAttribute type="string" keyPath="localizeKey" value="done"/>
+                                                </userDefinedRuntimeAttributes>
+                                                <connections>
+                                                    <action selector="didChooseCalendar:" destination="NVT-bo-x8o" id="jaA-NA-dwu"/>
+                                                </connections>
+                                            </barButtonItem>
+                                        </items>
+                                        <color key="barTintColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                    </toolbar>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="206" id="3RY-KS-MRP"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="Bhx-uf-sCd" firstAttribute="bottom" secondItem="KQA-xX-EPy" secondAttribute="bottom" id="3nq-P2-G9t"/>
                             <constraint firstItem="KQA-xX-EPy" firstAttribute="top" secondItem="Bhx-uf-sCd" secondAttribute="top" id="EBe-Ar-k1Y"/>
+                            <constraint firstItem="h6R-mN-a1V" firstAttribute="trailing" secondItem="Bhx-uf-sCd" secondAttribute="trailing" id="aL6-tx-ag8"/>
                             <constraint firstItem="KQA-xX-EPy" firstAttribute="leading" secondItem="Bhx-uf-sCd" secondAttribute="leading" id="bWP-DK-Cja"/>
+                            <constraint firstItem="h6R-mN-a1V" firstAttribute="leading" secondItem="Bhx-uf-sCd" secondAttribute="leading" id="lUs-BD-LqF"/>
                             <constraint firstItem="Bhx-uf-sCd" firstAttribute="trailing" secondItem="KQA-xX-EPy" secondAttribute="trailing" id="pmp-tz-clc"/>
+                            <constraint firstItem="Bhx-uf-sCd" firstAttribute="bottom" secondItem="h6R-mN-a1V" secondAttribute="bottom" id="viz-KS-Gj9"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Bhx-uf-sCd"/>
                     </view>
                     <connections>
+                        <outlet property="datePickerView" destination="gia-BM-VGq" id="VmV-tW-G9X"/>
+                        <outlet property="pickerContainerView" destination="h6R-mN-a1V" id="HhO-Cf-FyC"/>
                         <outlet property="tbvContent" destination="KQA-xX-EPy" id="t5n-MH-shR"/>
                     </connections>
                 </viewController>
